<resources>
    <string name="app_name">Lyrics</string>
    <string name="usernameTitle">Username:</string>
    <string name="usernameInput">Username</string>
    <string name="passwordTitle">Password:</string>
    <string name="passwordInput">Password</string>
    <string name="loginButton">Login</string>
    <string name="registerButton">Register first</string>
    <string name="newUsernameTitle">Create Username:</string>
    <string name="newPasswordTitle">Create Password:</string>
    <string name="createAccountBtn">Create Account</string>
    <string name="addProjectBtn">+</string>
    <string name="textEditor">Start Writing</string>

    <string name="loginErrorMessage">Incorrect username password combination.</string>
    <string name="usernameAlreadyExists">Username already exists! Choose something else</string>
    <string name="fillUsernameFirst">fill in a username first</string>
    <string name= "fillUsernameAndPassword">fill in a username and password first</string>
    <string name="error">something bad happend</string>
    <string name="usernameTaken">username is already taken</string>
    <string name="emptyFields">the fields cannot be empty</string>

    <string name="newProjectNameText">New Project Title</string>
    <string name="newProjectDescriptionText">Description</string>
    <string name="CreateNewProjectBtn">Create</string>
    <string name="RecordBtn">Record</string>
    <string name="SaveBtn">Save</string>
    <string name="shareBtn">Share</string>
    <string name="shareUserlbl">Share with:</string>
    <string name="stopRecBtn">StopR</string>
    <string name="playBtn">Play</string>
    <string name="stopPlayBtn">StopP</string>

    <string-array name="Sections">
        <item>Intro</item>
        <item>Chorus</item>
        <item>Pre-Chorus</item>
        <item>Post-Chorus</item>
        <item>Verse</item>
        <item>Bridge</item>
        <item>Outro</item>
    </string-array>

</resources>