<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android   .com/apk/res-auto"
    xmlns:app2="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProjectActivity">

    <TextView
        android:id="@+id/ProjectTitleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="20sp"
        app2:layout_constraintStart_toStartOf="parent"
        app2:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ProjectView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app2:layout_constraintBottom_toTopOf="@+id/AddBlockBtn"
        app2:layout_constraintEnd_toEndOf="parent"
        app2:layout_constraintHorizontal_bias="0.0"
        app2:layout_constraintStart_toStartOf="parent"
        app2:layout_constraintTop_toBottomOf="@+id/ProjectTitleView" />

    <Button
        android:id="@+id/SaveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:onClick="onBtnSaveClicked"
        android:text="@string/SaveBtn"
        app2:layout_constraintBottom_toTopOf="@+id/playBtn"
        app2:layout_constraintEnd_toEndOf="parent"
        app2:layout_constraintHorizontal_bias="0.5"
        app2:layout_constraintStart_toEndOf="@+id/removeBlockBtn" />

    <Button
        android:id="@+id/AddBlockBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:onClick="onBtnPlusClicked"
        android:text="@string/addProjectBtn"
        app2:layout_constraintBottom_toTopOf="@+id/stopRecordBtn"
        app2:layout_constraintEnd_toStartOf="@+id/removeBlockBtn"
        app2:layout_constraintHorizontal_bias="0.5"
        app2:layout_constraintStart_toEndOf="@+id/shareBtn" />

    <Button
        android:id="@+id/shareBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:onClick="onBtnShareClicked"
        android:text="@string/shareBtn"
        app2:layout_constraintBottom_toTopOf="@+id/recordbtn"
        app2:layout_constraintEnd_toStartOf="@+id/AddBlockBtn"
        app2:layout_constraintHorizontal_bias="0.5"
        app2:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/playBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:onClick="onBtnPlayPressed"
        android:text="@string/playBtn"
        app2:layout_constraintBottom_toBottomOf="parent"
        app2:layout_constraintEnd_toEndOf="parent"
        app2:layout_constraintHorizontal_bias="0.5"
        app2:layout_constraintStart_toEndOf="@+id/stopRecordBtn" />

    <Button
        android:id="@+id/recordbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:onClick="onBtnRecordPressed"
        android:text="@string/RecordBtn"
        app2:layout_constraintBottom_toBottomOf="parent"
        app2:layout_constraintEnd_toStartOf="@+id/stopRecordBtn"
        app2:layout_constraintHorizontal_bias="0.5"
        app2:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/removeBlockBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:onClick="onBtnMinusClicked"
        android:text="@string/stopPlayBtn"
        app2:layout_constraintBottom_toTopOf="@+id/stopRecordBtn"
        app2:layout_constraintEnd_toStartOf="@+id/SaveBtn"
        app2:layout_constraintHorizontal_bias="0.5"
        app2:layout_constraintStart_toEndOf="@+id/AddBlockBtn" />

    <Button
        android:id="@+id/stopRecordBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:onClick="onBtnStopPressed"
        android:text="@string/stopRecBtn"
        app2:layout_constraintBottom_toBottomOf="parent"
        app2:layout_constraintEnd_toStartOf="@+id/playBtn"
        app2:layout_constraintHorizontal_bias="0.5"
        app2:layout_constraintStart_toEndOf="@+id/recordbtn" />
</androidx.constraintlayout.widget.ConstraintLayout>